  RecordAuxiliary object.  Printing is customizable via a ptwrite filter
  function in Python.  By default, the raw ptwrite payload is printed for
  each ptwrite that is encountered.
* GDB now supports watchpoints for tagged data pointers on amd64.

* New commands

maint jit dump
  Dump an in-memory JIT object into a file.

* Add convenience variable `$_simd_lane`.

* Python API

  ** Added gdb.record.clear(). Clears the trace data of the current recording.
     This forces re-decoding of the trace for successive commands.

* MI changes

  ** '-break-insert -l'

     Added optional -l <simd-lane-id> argument to MI command -break-insert.
     A lane can be specified only together with the thread: user must provide
     a thread with -p argument.

     MI result output for -break-insert command will also contain
     lane="simd-lane-id" information if -l argument was specified.

     Also the MI output of -break-list and -break-info commands will have
     lane="simd-lane-id" information if the breakpoint is thread and SIMD lane
     specific.

* Changed remote packets

qXfer:features:read:target.xml

  The XML that is sent as a response can now include a "device" element
  that can be used for passing information when the remote inferior
  represents a device, e.g.  a GPU.

*** Changes in GDB 15

* The MPX commands "show/set mpx bound" have been deprecated, as Intel
  listed MPX as removed in 2019.

* Building GDB and GDBserver now requires a C++17 compiler.
  For example, GCC 9 or later.

* GDB index now contains information about the main function.  This speeds up
  startup when it is being used for some large binaries.

* On hosts where threading is available, DWARF reading is now done in
  the background, resulting in faster startup.  This can be controlled
  using "maint set dwarf synchronous".

* Changed commands

disassemble
  Attempting to use both the 'r' and 'b' flags with the disassemble
  command will now give an error.  Previously the 'b' flag would